--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="css/styles.css">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
      <link rel="manifest" href="manifest.json" />
 </head>
@@ -15,7 +15,7 @@
     <div class="row fullscreen align-items-center justify-content-center" style="height: 722px;">
         <div class="col-lg-10">
             <div class="banner-content text-center">
-                <a href="main.html">
+                <a href="pages/main.html">
                 <i class="fas fa-angle-double-down text-white"></i>
                 <p class="text-uppercase text-white">Featured Music</p>
             </a>
