--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="../css/blog.css">
+    <link rel="manifest" href="manifest.json" />
 </head>
 <body>
      <!-- bradcam_area  -->
@@ -42,9 +43,9 @@
                             </div>
 
                             <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
+                                <p class="d-inline-block">
                                     <h2>Google inks pact for new 35-storey office</h2>
-                                </a>
+                                </p>
                                 <p>That dominion stars lights dominion divide years for fourth have don't stars is that
                                     he earth it first without heaven in place seed it second morning saying.</p>
                                 <ul class="blog-info-link">
@@ -64,9 +65,9 @@
                             </div>
 
                             <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
+                                <p class="d-inline-block">
                                     <h2>Google inks pact for new 35-storey office</h2>
-                                </a>
+                                </p>
                                 <p>That dominion stars lights dominion divide years for fourth have don't stars is that
                                     he earth it first without heaven in place seed it second morning saying.</p>
                                 <ul class="blog-info-link">
@@ -86,9 +87,9 @@
                             </div>
 
                             <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
+                                <p class="d-inline-block">
                                     <h2>Google inks pact for new 35-storey office</h2>
-                                </a>
+                                </p>
                                 <p>That dominion stars lights dominion divide years for fourth have don't stars is that
                                     he earth it first without heaven in place seed it second morning saying.</p>
                                 <ul class="blog-info-link">
@@ -108,9 +109,9 @@
                             </div>
 
                             <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
+                                <p class="d-inline-block">
                                     <h2>Google inks pact for new 35-storey office</h2>
-                                </a>
+                                </p>
                                 <p>That dominion stars lights dominion divide years for fourth have don't stars is that
                                     he earth it first without heaven in place seed it second morning saying.</p>
                                 <ul class="blog-info-link">
@@ -130,9 +131,9 @@
                             </div>
 
                             <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
+                                <p class="d-inline-block">
                                     <h2>Google inks pact for new 35-storey office</h2>
-                                </a>
+                                </p>
                                 <p>That dominion stars lights dominion divide years for fourth have don't stars is that
                                     he earth it first without heaven in place seed it second morning saying.</p>
                                 <ul class="blog-info-link">
