--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="../css/aboutme.css">
     <link rel="manifest" href="manifest.json" />
+    <script src="../navbar/jquery/jquery.js"></script>
+    <script>
+        $(function(){
+            $("#includedContent").load("header.html");
+        });
+    </script>
 </head>
 <body>
+  <div id="includedContent"></div>
     <div class="row">
         <div class="containers col-lg-6 col-md-6">
           
