--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,8 +11,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="../css/blog.css">
     <link rel="manifest" href="manifest.json" />
+    <script src="../navbar/jquery/jquery.js"></script>
+    <script>
+        $(function(){
+            $("#includedContent").load("header.html");
+        });
+    </script>
 </head>
 <body>
+    <div id="includedContent"></div>
      <!-- bradcam_area  -->
      <div class="bradcam_area bradcam_bg_4">
         <div class="container">
