--- a/pages/theory.html
+++ b/pages/theory.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="../css/about.css">
     <script src="../navbar/jquery/jquery.js"></script>
     <script>
         $(function(){
@@ -18,21 +18,18 @@
 </head>
 <body>
     <div id="includedContent"></div>
-      <!-- bradcam_area  -->
-      <div class="bradcam_area bradcam_bg_3">
+    <div class="bradcam_area bradcam_bg_5">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>About Us</h3>
-                        <p>Music Application</p>
+                        <h3>Music Theory</h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--/ bradcam_area  -->
-    
+
     <div class="about_story mt-5">
         <div class="container">
             <div class="row">
@@ -44,8 +41,17 @@
                         <div class="col-lg-11 offset-lg-1">
                             <div class="story_info">
                                 <div class="row">
-                                    <div class="col-lg-9">
-                                        <p>Music is an art form and cultural activity whose medium is sound organized in time. General definitions of music include common elements such as pitch (which governs melody and harmony), rhythm (and its associated concepts tempo, meter, and articulation), dynamics (loudness and softness), and the sonic qualities of timbre and texture (which are sometimes termed the "color" of a musical sound). Different styles or types of music may emphasize, de-emphasize or omit some of these elements. Music is performed with a vast range of instruments and vocal techniques ranging from singing to rapping; there are solely instrumental pieces, solely vocal pieces (such as songs without instrumental accompaniment) and pieces that combine singing and instruments. The word derives from Greek μουσική (mousike; "art of the Muses").
+                                    <div class="col-lg-10">
+                                        <p>
+                                            <i>
+                                                <dt>Music theory is the study of the practices and possibilities of music. The Oxford Companion to Music describes three interrelated uses of the term "music theory":
+                                            </dt>
+                                            <br>
+                                            <dd class="ml-5"><i>
+                                            The first is what is otherwise called "rudiments", currently taught as the elements of notation, of key signatures, of time signatures, of rhythmic notation, and so on. [...] The second is the study of writings about music from ancient times onwards. [...] The third is an area of current musicological study that seeks to define processes and general principles in music—a sphere of research that can be distinguished from analysis in that it takes as its starting-point not the individual work or performance but the fundamental materials from which it is built.
+    <br><br>                                    </dd></i> 
+    </dl>   
+                                            Music theory is frequently concerned with describing how musicians and composers make music, including tuning systems and composition methods among other topics. Because of the ever-expanding conception of what constitutes music (see Definition of music), a more inclusive definition could be that music theory is the consideration of any sonic phenomena, including silence, as they relate to music. This is not an absolute guideline; for example, the study of "music" in the Quadrivium liberal arts university curriculum that was common in medieval Europe was an abstract system of proportions that was carefully studied at a distance from actual musical practice.[2] However, this medieval discipline became the basis for tuning systems in later centuries, and it is generally included in modern scholarship on the history of music theory.
                                             <br>
                                             <br>
 
@@ -59,11 +65,5 @@
             </div>
         </div>
     </div>
-    <center>
-    <a href="aboutme.html">
-        <i class="fas fa-angle-double-down"></i>
-        <h1>About The Dev</h1>
-        </a>
-    </center>
-    </body>
+</body>
 </html>
