--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/gallery.css">
     <link rel="manifest" href="manifest.json" />
+    <script src="../navbar/jquery/jquery.js"></script>
+    <script>
+        $(function(){
+            $("#includedContent").load("header.html");
+        });
+    </script>
 </head>
 <body>
+  <div id="includedContent"></div>
     <center><a id="logo">Gallery</a></center>
     <!-- <center><h1 class="contentHead">ABOUT ME</h1></center> -->
     <div class = "gallery">
