--- a/pages/news.html
+++ b/pages/news.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="manifest" href="manifest.json" />
+    <script src="../navbar/jquery/jquery.js"></script>
+    <script>
+        $(function(){
+            $("#includedContent").load("header.html");
+        });
+    </script>
 </head>
 <body>
+    <div id="includedContent"></div>
         <!-- ##### Hero Area Start ##### -->
         <div class="hero-area">
             <div class="container">
