--- a/pages/blog.html
+++ b/pages/blog.html
@@ -42,7 +42,7 @@
                     <div class="blog_left_sidebar">
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="../image/m1.jpg" alt="">
+                                <img class="card-img rounded-0" src="../image/g14.jpg" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -86,28 +86,6 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="../image/m3.jpg" alt="">
-                                <a href="#" class="blog_item_date">
-                                    <h3>15</h3>
-                                    <p>Jan</p>
-                                </a>
-                            </div>
-
-                            <div class="blog_details">
-                                <p class="d-inline-block">
-                                    <h2>Google inks pact for new 35-storey office</h2>
-                                </p>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
-                                <ul class="blog-info-link">
-                                    <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
-                                    <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
-                                </ul>
-                            </div>
-                        </article>
-
-                        <article class="blog_item">
-                            <div class="blog_item_img">
                                 <img class="card-img rounded-0" src="../image/m1.webp" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
@@ -130,7 +108,7 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="../image/m1.jpg" alt="">
+                                <img class="card-img rounded-0" src="../image/m3.jpg" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -149,5 +127,7 @@
                                 </ul>
                             </div>
                         </article>
+
+                       
 </body>
 </html>
