--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="includedContent"></div>
-    <center><a id="logo">Gallery</a></center>
+    <center class="my-3"><a id="logo">Gallery</a></center>
     <!-- <center><h1 class="contentHead">ABOUT ME</h1></center> -->
     <div class = "gallery">
         <div class="clipped-border">
