--- a/pages/header.html
+++ b/pages/header.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="lyrics.html">Lyrics</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="theory.html">Music-Theory</a>
+              <a class="nav-link" href="theory.html">What is Music</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
