--- a/pages/theory.html
+++ b/pages/theory.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="story_heading">
-                        <h3>Music</h3>
+                        <h3>What is Music</h3>
                     </div>
                     <div class="row">
                         <div class="col-lg-11 offset-lg-1">
