--- a/pages/blog.html
+++ b/pages/blog.html
@@ -44,17 +44,17 @@
                             <div class="blog_item_img">
                                 <img class="card-img rounded-0" src="../image/g14.jpg" alt="">
                                 <a href="#" class="blog_item_date">
-                                    <h3>15</h3>
-                                    <p>Jan</p>
+                                    <h3>07</h3>
+                                    <p>Feb</p>
                                 </a>
                             </div>
 
                             <div class="blog_details">
                                 <p class="d-inline-block">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>ESSENGER DELIVERS STUNNING DEBUT ALBUM VIA FIXT NEON</h2>
                                 </p>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>If you have yet to come across Essenger's music... I won't say you've been living under a rock, but you most certainly have been missing ou...
+                                </p>
                                 <ul class="blog-info-link">
                                     <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                     <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -66,17 +66,16 @@
                             <div class="blog_item_img">
                                 <img class="card-img rounded-0" src="../image/m2.jpg" alt="">
                                 <a href="#" class="blog_item_date">
-                                    <h3>15</h3>
-                                    <p>Jan</p>
+                                    <h3>06</h3>
+                                    <p>Feb</p>
                                 </a>
                             </div>
 
                             <div class="blog_details">
                                 <p class="d-inline-block">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>SNOWGLOBE MUSIC FESTIVAL SUED FOR CARICINOGENIC AIR QUALITY FOLLOWING 2018 EVENT</h2>
                                 </p>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Festivals around the world have been more conscious about environmental concerns in the past few years, especially as activism around climate changed has reache...</p>
                                 <ul class="blog-info-link">
                                     <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                     <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -88,17 +87,16 @@
                             <div class="blog_item_img">
                                 <img class="card-img rounded-0" src="../image/m1.webp" alt="">
                                 <a href="#" class="blog_item_date">
-                                    <h3>15</h3>
-                                    <p>Jan</p>
+                                    <h3>06</h3>
+                                    <p>Feb</p>
                                 </a>
                             </div>
 
                             <div class="blog_details">
                                 <p class="d-inline-block">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>YOUR EDM PREMIERE: SPAG HEDDY – BASS GOES BOOM [NEVER SAY DIE]</h2>
                                 </p>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Spag Heddy has always been one of bass music's most well-kept secrets. Though you won't always see his name at the top of lineups, you can be certain that you c...</p>
                                 <ul class="blog-info-link">
                                     <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                     <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -110,17 +108,16 @@
                             <div class="blog_item_img">
                                 <img class="card-img rounded-0" src="../image/m3.jpg" alt="">
                                 <a href="#" class="blog_item_date">
-                                    <h3>15</h3>
-                                    <p>Jan</p>
+                                    <h3>05</h3>
+                                    <p>Feb</p>
                                 </a>
                             </div>
 
                             <div class="blog_details">
                                 <p class="d-inline-block">
-                                    <h2>Google inks pact for new 35-storey office</h2>
+                                    <h2>TISOKI DROPS NEW SONG “PROMISE” WITH LIL LOTUS</h2>
                                 </p>
-                                <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                    he earth it first without heaven in place seed it second morning saying.</p>
+                                <p>Tisoki isn't one to be tied down by genres. Though he generally stays within the bass realm, he weaves through styles and influences with elegance. On his newes...</p>
                                 <ul class="blog-info-link">
                                     <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                     <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
