--- a/pages/lyric.html
+++ b/pages/lyric.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/lyrics.css">
 </head>
+
 <body>
-    <div class="lyric mb-5">
+    <div class="lyric" style="width: 100%!important;">
         <h1>Lyrics of Tu Meri Song</h1>
         <p>Aisi kya chali hawa<br>
             Ke le gai meri saanson ko<br>
@@ -18,7 +20,7 @@
             Main tera ra hone laga<br>
             Main main main main tera ra ra<br>
             Tu Meri ri hone lagi<br>
-            <br>
+            <br><br>
             Kaise yeh hua magar<br>
             Na hai mujhe na tujhko koi khabar<br>
             Par yeh dil ab se hai kehne laga<br>
@@ -26,7 +28,7 @@
             Main tera ra hone laga<br>
             Main main main main tera ra ra<br>
             Tu Meri ri hone lagi<br>
-    
+            <br><br>
             Na jaanoon main na jaane tu<br>
             Hua yeh jaadoo kaise<br>
             Jo mera tha woh kho gaya<br>
@@ -36,7 +38,44 @@
             Main tera ra hone laga<br>
             Main main main main tera ra ra<br>
             Tu Meri ri hone lagi<br>
-            </p>
-        </div>
+            <br><br>
+            Yoon kabhi, yoon kabhi<br>
+            Dil ka hai jaise haan yahi bas yahi<br>
+            Sama hai jisme zindagi zindagi<br>
+            Hai jeeni aise ek pal, ek pal ho baaki<br>
+            Jaise ajnabi jahan aake lag jaaye gale<br>
+            Jaise tu chale aur duniya tere sang chale<br>
+            Jaise raat chupke se tere kanon mein kahe<br>
+            Ki ab to jaane kyun, jaane kyun, jaane kyun<br>
+<br><br>
+            Tu Tu Tu Tu Meri ri ri<br>
+            Main tera ra hone laga<br>
+            Main main main main tera ra ra<br>
+            Tu Meri ri hone lagi<br>
+<br><br>
+            Tu Tu Tu Tu Meri ri ri<br>
+            Main tera ra hone laga<br>
+            Main main main main tera ra ra<br>
+            Tu Meri ri hone lagi<br>
+<br><br>
+            Aisi kya chali hawa<br>
+            Ke le gai meri saanson ko<br>
+            Mujhse door tere paas<br>
+            Aur mujhe hua ehsaas<br>
+            Tu Tu Tu Tu Tu Tu<br>
+<br><br>
+            Tu Tu Tu Tu Meri ri ri<br>
+            Main tera ra hone laga<br>
+            Main main main main tera ra ra<br>
+            Tu Meri ri hone lagi<br>
+<br><br>
+            Tu Tu Tu Tu Meri ri ri<br>
+            Main tera ra hone laga<br>
+            Main main main main tera ra ra<br>
+            Tu Meri ri hone lagi<br><br>
+
+        </p>
+    </div>
 </body>
+
 </html>
