--- a/pages/lyrics.html
+++ b/pages/lyrics.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <div id="includedContent"></div>
-   <img src="../image/bang-bang.jpg" alt="">
-    <iframe src="lyric.html" class="lyric"></iframe>
-    <iframe src="track.html" class="tracks"></iframe>
+    <iframe src="lyrics-image.html" frameborder="0" class="image"></iframe>
+    <iframe src="lyric.html" class="lyric"frameborder="0"></iframe>
+    <iframe src="track.html" class="tracks" frameborder="0"></iframe>
 </body>
 </html>
