--- a/pages/track.html
+++ b/pages/track.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/lyrics.css">
 </head>
 <body>
-    <div class="tracks mb-4">
+    <div class="tracks" style="width: 100%!important;">
         <p>
             <h1>Tracks listing</h1>
             <table class="table">
